--- a/src/experiments_hw3.ipynb
+++ b/src/experiments_hw3.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,20 +503,24 @@
     "    # Report the total number and what relatve portion of all voxels are in the visual hull\n",
     "    num_occupied = int(voxels.sum())\n",
     "    percent_occupied = num_occupied / np.prod(scene_shape)\n",
-    "    print(f\"{num_occupied} voxels are in the visual hull, representing {percent_occupied * 100}% of the entire voxel grid.\")\n",
+    "    print(f\"=========== Identifying Occupied Voxels.... ===========\")\n",
+    "    print(f\"Total number: {num_occupied}.\")\n",
+    "    print(f\"Percentage: {percent_occupied * 100}%.\")\n",
     "    return voxels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "150 voxels are in the visual hull, representing 0.12% of the entire voxel grid.\n"
+      "=========== Identifying Occupied Voxels.... ===========\n",
+      "Total number: 150.\n",
+      "Percentage: 0.12%.\n"
      ]
     }
    ],
@@ -532,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +545,7 @@
        "(numpy.ndarray, (50, 50, 50))"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +565,7 @@
        "150.0"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +601,7 @@
        "array([0., 1.])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,33 +642,75 @@
     "\n",
     "    # find the surface voxels\n",
     "    occupied_index_locations = np.where(occupancy_voxel_grid == 1.)\n",
+    "    occupied_indices = np.column_stack(occupied_index_locations)\n",
     "    if debug_mode:\n",
-    "        print(f\"Indices of non-empty space: {occupied_index_locations}.\")\n",
-    "    for location in occupied_index_locations:\n",
-    "        if len(location) == 3:\n",
-    "            x_index, y_index, z_index = location\n",
-    "            # search all the neighbors\n",
-    "            neighbor_indices_x = list(set([\n",
-    "                max(0, x_index - 1), x_index, min(x_index + 1, occupancy_voxel_grid.shape[0] - 1)\n",
-    "            ]))\n",
-    "            neighbor_indices_y = list(set([\n",
-    "                max(0, y_index - 1), y_index, min(y_index + 1, occupancy_voxel_grid.shape[1] - 1)\n",
-    "            ]))\n",
-    "            neighbor_indices_z = list(set([\n",
-    "                max(0, z_index - 1), z_index, min(z_index + 1, occupancy_voxel_grid.shape[2] - 1)\n",
-    "            ]))\n",
-    "            nx, ny, nz = np.meshgrid(neighbor_indices_x, neighbor_indices_y, neighbor_indices_z, indexing=\"ij\")\n",
-    "            num_empty = 0\n",
-    "            for neighbor_num in np.arange(nx.shape[0]):\n",
-    "                neighbor_occupancy = occupancy_voxel_grid[\n",
-    "                    nx[neighbor_num],\n",
-    "                    ny[neighbor_num],\n",
-    "                    nz[neighbor_num]\n",
-    "                ]\n",
-    "                if neighbor_occupancy == 0:  # we'll end up checking the voxel itself, but that's ok b/c it's guaranteed to be 1\n",
-    "                    num_empty += 1\n",
-    "            if num_empty > 0:\n",
-    "                surface_voxels.append([x_index, y_index, z_index])\n",
+    "        print(f\"[DEBUG] No. occupied spaces: {occupied_indices.shape[0]}.\")\n",
+    "        print(f\"[DEBUG] Indices of non-empty space: {occupied_indices}.\")\n",
+    "    for x_index, y_index, z_index in occupied_indices:\n",
+    "        if debug_mode:\n",
+    "            print(f\"[DEBUG] current occupied voxel: {x_index, y_index, z_index}\")\n",
+    "        # ***[SUSPECT] search all the neighbors - 1st implementation, I thought we should search in all 10 directions ****\n",
+    "        # neighbor_indices_x = list(set([\n",
+    "        #     max(0, x_index - 1),\n",
+    "        #     x_index,\n",
+    "        #     min(x_index + 1, occupancy_voxel_grid.shape[0] - 1)\n",
+    "        # ]))\n",
+    "        # neighbor_indices_y = list(set([\n",
+    "        #     max(0, y_index - 1),\n",
+    "        #     y_index,\n",
+    "        #     min(y_index + 1, occupancy_voxel_grid.shape[1] - 1)\n",
+    "        # ]))\n",
+    "        # neighbor_indices_z = list(set([\n",
+    "        #     max(0, z_index - 1),\n",
+    "        #     z_index,\n",
+    "        #     min(z_index + 1, occupancy_voxel_grid.shape[2] - 1)\n",
+    "        # ]))\n",
+    "        # num_empty = 0\n",
+    "        # for neighbor_x in neighbor_indices_x:\n",
+    "        #     for neighbor_y in neighbor_indices_y:\n",
+    "        #         for neighbor_z in neighbor_indices_z:\n",
+    "        #             if debug_mode:\n",
+    "        #                 print(f\"[DEBUG] current neighbor voxel: {neighbor_x, neighbor_y, neighbor_z}\")\n",
+    "        #             neighbor_occupancy = occupancy_voxel_grid[\n",
+    "        #                 neighbor_x,\n",
+    "        #                 neighbor_y,\n",
+    "        #                 neighbor_z\n",
+    "        #             ]\n",
+    "        #           # we'll end up checking the voxel itself, but that's ok b/c it's guaranteed to be 1\n",
+    "        #           if (\n",
+    "        #               -1 < neighbor_x < occupied_space.shape[0]\n",
+    "        #               and -1 < neighbor_y < occupied_space.shape[1]\n",
+    "        #               and -1 < neighbor_z < occupied_space.shape[2]\n",
+    "        #               and neighbor_occupancy == 0.\n",
+    "        #           ):\n",
+    "        #               num_empty += 1\n",
+    "        # ***[SUSPECT] search all the neighbors - 2nd implementation, I thought we should search on all 6 faces - probably the correct way ****\n",
+    "        neighbor_indices = np.array([\n",
+    "            [x_index - 1, y_index, z_index],\n",
+    "            [x_index + 1, y_index, z_index],\n",
+    "            [x_index, y_index - 1, z_index],\n",
+    "            [x_index, y_index + 1, z_index],\n",
+    "            [x_index, y_index, z_index - 1],\n",
+    "            [x_index, y_index, z_index + 1],\n",
+    "        ])\n",
+    "        num_empty = 0\n",
+    "        for neighbor_x, neighbor_y, neighbor_z in neighbor_indices:\n",
+    "            if debug_mode:\n",
+    "                print(f\"[DEBUG] current neighbor voxel: {neighbor_x, neighbor_y, neighbor_z}\")\n",
+    "            neighbor_occupancy = occupancy_voxel_grid[\n",
+    "                neighbor_x,\n",
+    "                neighbor_y,\n",
+    "                neighbor_z\n",
+    "            ]\n",
+    "            if (\n",
+    "                -1 < neighbor_x < occupied_space.shape[0]\n",
+    "                and -1 < neighbor_y < occupied_space.shape[1]\n",
+    "                and -1 < neighbor_z < occupied_space.shape[2]\n",
+    "                and neighbor_occupancy == 0.\n",
+    "            ):\n",
+    "                num_empty += 1\n",
+    "        if num_empty > 0:\n",
+    "            surface_voxels.append([x_index, y_index, z_index])\n",
     "\n",
     "    # report total num and % of surface voxels\n",
     "    surface_voxels = np.asarray(surface_voxels)\n",
@@ -672,73 +718,35 @@
     "    num_surface_voxels = surface_voxels.shape[0]\n",
     "    total_num_voxels = np.prod(occupancy_voxel_grid.shape)\n",
     "    print(f\"Total number: {num_surface_voxels}.\")\n",
-    "    print(f\"Percentage: {(num_surface_voxels % total_num_voxels) * 100}%.\")\n",
+    "    print(f\"Percentage: {(num_surface_voxels / total_num_voxels) * 100}%.\")\n",
     "\n",
     "    return surface_voxels\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indices of non-empty space: (array([25, 25, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26,\n",
-      "       26, 26, 26, 26, 26, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27,\n",
-      "       27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27,\n",
-      "       27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27,\n",
-      "       27, 27, 27, 27, 27, 27, 27, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28,\n",
-      "       28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28,\n",
-      "       28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 29, 29, 29,\n",
-      "       29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29,\n",
-      "       29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 30, 30, 31, 33]), array([14, 14, 13, 13, 13, 13, 13, 13, 13, 14, 14, 14, 14, 14, 14, 14, 14,\n",
-      "       14, 14, 15, 15, 15, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12,\n",
-      "       12, 12, 12, 12, 12, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13,\n",
-      "       13, 13, 13, 13, 13, 13, 13, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14,\n",
-      "       14, 14, 14, 14, 14, 15, 15, 12, 12, 12, 12, 12, 12, 13, 13, 13, 13,\n",
-      "       13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 14, 14,\n",
-      "       14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 13, 13, 13,\n",
-      "       13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 14, 14, 14, 14, 14, 14, 14,\n",
-      "       14, 14, 14, 14, 15, 15, 15, 15, 15, 15, 13, 13, 13, 12]), array([19, 20, 13, 14, 21, 22, 23, 24, 25, 22, 23, 24, 25, 26, 28, 29, 30,\n",
-      "       31, 32, 29, 30, 31,  3,  4,  5,  6,  7,  8,  9, 10, 11, 17, 18, 19,\n",
-      "       20, 21, 22, 23, 24,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19,\n",
-      "       20, 21, 22, 23, 24, 25, 26, 14, 15, 16, 17, 18, 22, 23, 24, 25, 26,\n",
-      "       27, 28, 29, 30, 31, 30, 31, 18, 19, 20, 21, 22, 23, 10, 11, 12, 13,\n",
-      "       14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28,  9, 10,\n",
-      "       11, 12, 13, 14, 15, 16, 17, 18, 19, 24, 25, 26, 27, 28,  8,  9, 10,\n",
-      "       11, 12, 13, 14, 15, 16, 17, 18, 19, 28,  6,  7,  8,  9, 10, 11, 12,\n",
-      "       13, 14, 15, 16,  0,  1,  2,  3, 10, 11, 28, 29, 29, 31])).\n",
       "=========== Identifying Surface Voxels.... ===========\n",
-      "Total number: 0.\n",
-      "Percentage: 0%.\n"
+      "Total number: 145.\n",
+      "Percentage: 0.116%.\n"
      ]
     }
    ],
    "source": [
-    "surface_voxels_indices = identify_surface_voxels(occupied_space, debug_mode=True)"
+    "surface_voxels_indices = identify_surface_voxels(occupied_space, debug_mode=False)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 74,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "occupied_space[25, 14, 19]"
+    "Looks like 145 of the occupied voxels are on the surface - is this weird???"
    ]
   },
   {
