[add] solve step 5

--- a/src/experiments_hw3.ipynb
+++ b/src/experiments_hw3.ipynb
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1510,7 @@
        "870"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1530,7 +1530,7 @@
        "43.333333333333336"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1551,6 +1551,83 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Step 5: Determine the False-Color RGB for Each Output 3D Point\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import functools\n",
+    "import numpy as np\n",
+    "\n",
+    "def determine_false_colors(\n",
+    "        points_for_3d_model: np.ndarray,\n",
+    "        dtype: np.dtype = np.uint8\n",
+    "    ) -> np.ndarray:\n",
+    "    \"\"\"TODO[Zain]: add docstring\"\"\"\n",
+    "    ### HELPER(S)\n",
+    "    def _compute_rgb(\n",
+    "            xyz: np.ndarray, \n",
+    "            X_min: float, X_max: float,\n",
+    "            Y_min: float, Y_max: float,\n",
+    "            Z_min: float, Z_max: float,\n",
+    "            dtype: np.dtype,\n",
+    "        ) -> np.ndarray:\n",
+    "        \"\"\"Assign an RGB value to a single XYZ worldspace location.\"\"\"\n",
+    "        max_pixel_value = np.iinfo(dtype).max  # 255 by default\n",
+    "        xyz = xyz.reshape((3,))\n",
+    "        red = max_pixel_value * (xyz[0] - X_min) / (X_max - X_min)\n",
+    "        green = max_pixel_value * (xyz[1] - Y_min) / (Y_max - Y_min)\n",
+    "        blue = max_pixel_value * (xyz[2] - Z_min) / (Z_max - Z_min)\n",
+    "        return np.asarray([red, green, blue])\n",
+    "\n",
+    "    ### DRIVER\n",
+    "    # compute the \"range bounding box\" - min and max along X, Y, and Z\n",
+    "    X_min, X_max = points_for_3d_model[:, 0].min(), points_for_3d_model[:, 0].max()\n",
+    "    Y_min, Y_max = points_for_3d_model[:, 1].min(), points_for_3d_model[:, 1].max()\n",
+    "    Z_min, Z_max = points_for_3d_model[:, 2].min(), points_for_3d_model[:, 2].max()\n",
+    "\n",
+    "    # reduce redundant passing of variables\n",
+    "    _compute_rgb_simplified = functools.partial(\n",
+    "        _compute_rgb,\n",
+    "        X_min=X_min,\n",
+    "        X_max=X_max,\n",
+    "        Y_min=Y_min,\n",
+    "        Y_max=Y_max,\n",
+    "        Z_min=Z_min,\n",
+    "        Z_max=Z_max,\n",
+    "        dtype=dtype,\n",
+    "    )\n",
+    "\n",
+    "    # add\n",
+    "    false_color_rgb = np.apply_along_axis(\n",
+    "        _compute_rgb_simplified,\n",
+    "        1,\n",
+    "        points_for_3d_model,\n",
+    "    )\n",
+    "\n",
+    "    return false_color_rgb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "false_rgb_values = determine_false_colors(points_for_3d_model)\n",
+    "assert false_rgb_values.shape == (points_for_3d_model.shape[0], 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -1570,7 +1647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
