add step 6 code

--- a/src/experiments_hw3.ipynb
+++ b/src/experiments_hw3.ipynb
@@ -1615,12 +1615,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "false_rgb_values = determine_false_colors(points_for_3d_model)\n",
     "assert false_rgb_values.shape == (points_for_3d_model.shape[0], 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 6: Write a PLY File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from io import TextIOWrapper\n",
+    "\n",
+    "import functools\n",
+    "import numpy as np\n",
+    "\n",
+    "def save_colored_point_cloud(\n",
+    "    xyz_points: np.ndarray,\n",
+    "    rgb_values: np.ndarray,\n",
+    "    path_to_save: str = \"./myColoredPtCloud.ply\",\n",
+    ") -> None:\n",
+    "    ### HELPER(S)\n",
+    "    def _write_one_point(xyz_rgb_1point: np.ndarray, f: TextIOWrapper) -> None:\n",
+    "        list_repr = list(xyz_rgb_1point)\n",
+    "        str_repr = str(list_repr)\n",
+    "        ply_repr = \" \".join(str_repr[1:-1].split(\",\"))\n",
+    "        f.write(f\"{ply_repr}\\n\")\n",
+    "\n",
+    "    ### DRIVER\n",
+    "    num_vertices = xyz_points.shape[0]\n",
+    "    xyz_rgb_all = np.column_stack([xyz_points, rgb_values])\n",
+    "\n",
+    "    with open(path_to_save, \"a\") as f:\n",
+    "        # write the header\n",
+    "        f.write(\"ply\\n\")\n",
+    "        f.write(\"format ascii 1.0\\n\")\n",
+    "        f.write(f\"element vertex {num_vertices}\\n\")\n",
+    "        f.write(\"property float x\\n\")\n",
+    "        f.write(\"property float y\\n\")\n",
+    "        f.write(\"property float z\\n\")\n",
+    "        f.write(\"property uchar red\\n\")\n",
+    "        f.write(\"property uchar green\\n\")\n",
+    "        f.write(\"property uchar blue\\n\")\n",
+    "        f.write(\"element face 0\\n\")\n",
+    "        f.write(\"end_header\\n\")\n",
+    "        # write the points and their colors\n",
+    "        _write_one_point_simplified = functools.partial(_write_one_point, f=f)\n",
+    "        np.apply_along_axis(_write_one_point_simplified, 1, xyz_rgb_all)\n",
+    "\n",
+    "    print(f\"Point cloud saved to {path_to_save}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point cloud saved to ./Syed_Raza_PtCloudFalseColors.ply.\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_colored_point_cloud(\n",
+    "    points_for_3d_model,\n",
+    "    false_rgb_values,\n",
+    "    path_to_save=\"./Syed_Raza_PtCloudFalseColors.ply\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: visualize in eshlab, possibly debug pixel values"
    ]
   },
   {
