--- a/src/experiments_hw3.ipynb
+++ b/src/experiments_hw3.ipynb
@@ -1568,17 +1568,29 @@
     "        points_for_3d_model: np.ndarray,\n",
     "        dtype: np.dtype = np.uint8\n",
     "    ) -> np.ndarray:\n",
-    "    \"\"\"TODO[Zain]: add docstring\"\"\"\n",
+    "    \"\"\"\n",
+    "    Assigns RGB values to points in a 3D volume based on min-max scaling.\n",
+    "\n",
+    "    RGB values will fall between 0 and the max integer in whatever data type\n",
+    "    we're using (default is 255, for unsigned 8-bit integers).\n",
+    "\n",
+    "    Parameters:\n",
+    "        points_for_3d_model(2D NumPy array): contains nx3 values - the XYZ worldspace\n",
+    "            coordinates of each point included in the 3D model\n",
+    "        dtype(np.dtype): determines the range of pixel values assigned per channel\n",
+    "\n",
+    "    Returns: np.ndarray: contains nx3 values - RGB vectors for each input point.\n",
+    "    \"\"\"\n",
     "    ### HELPER(S)\n",
     "    def _compute_rgb(\n",
-    "            xyz: np.ndarray, \n",
+    "            xyz: np.ndarray,\n",
     "            X_min: float, X_max: float,\n",
     "            Y_min: float, Y_max: float,\n",
     "            Z_min: float, Z_max: float,\n",
     "            dtype: np.dtype,\n",
     "        ) -> np.ndarray:\n",
-    "        \"\"\"Assign an RGB value to a single XYZ worldspace location.\"\"\"\n",
-    "        max_pixel_value = np.iinfo(dtype).max  # 255 by default\n",
+    "        \"\"\"Assign an RGB value to a *single* XYZ worldspace location.\"\"\"\n",
+    "        max_pixel_value = np.iinfo(dtype).max  # 255 if using uint8\n",
     "        xyz = xyz.reshape((3,))\n",
     "        red = max_pixel_value * (xyz[0] - X_min) / (X_max - X_min)\n",
     "        green = max_pixel_value * (xyz[1] - Y_min) / (Y_max - Y_min)\n",
@@ -1632,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1646,18 +1658,43 @@
     "    rgb_values: np.ndarray,\n",
     "    path_to_save: str = \"./myColoredPtCloud.ply\",\n",
     ") -> None:\n",
+    "    \"\"\"\n",
+    "    Serializes a point cloud as a PLY file in the ASCII format.\n",
+    "\n",
+    "    We use 3 `float` properties to represent the XYZ locations of each point,\n",
+    "    and 3 `uchar` properties to represent their respective RGB values.\n",
+    "\n",
+    "    Parameters:\n",
+    "        xyz_points(2D NumPy array): contains nx3 values - the XYZ worldspace\n",
+    "            coordinates of each point included in the 3D model\n",
+    "        rgb_values(2D NumPy array): contains nx3 values - the corresponding\n",
+    "            RGB assignments for each input point.\n",
+    "        path_to_save(str): save location of the output PLY.\n",
+    "            Assumes the file name and the \".ply\" extension are included at\n",
+    "            the end. It will be displayed in a log message if/when the\n",
+    "            save process is successfully completed.\n",
+    "\n",
+    "    Returns: None\n",
+    "    \"\"\"\n",
     "    ### HELPER(S)\n",
     "    def _write_one_point(xyz_rgb_1point: np.ndarray, f: TextIOWrapper) -> None:\n",
-    "        list_repr = list(xyz_rgb_1point)\n",
-    "        str_repr = str(list_repr)\n",
-    "        ply_repr = \" \".join(str_repr[1:-1].split(\",\"))\n",
-    "        f.write(f\"{ply_repr}\\n\")\n",
+    "        xyz_1point, rgb_1point = xyz_rgb_1point[:3], xyz_rgb_1point[3:]\n",
+    "\n",
+    "        xyz_list_repr = xyz_1point.tolist()\n",
+    "        xyz_str_repr = str(xyz_list_repr)\n",
+    "        xyz_ply_repr = \" \".join(xyz_str_repr[1:-1].split(\",\"))\n",
+    "\n",
+    "        rgb_list_repr = rgb_1point.astype(int).tolist()  # because it fits into the uchar type\n",
+    "        rgb_str_repr = str(rgb_list_repr)\n",
+    "        rgb_ply_repr = \" \".join(rgb_str_repr[1:-1].split(\",\"))\n",
+    "\n",
+    "        f.write(f\"{xyz_ply_repr} {rgb_ply_repr}\\n\")\n",
     "\n",
     "    ### DRIVER\n",
     "    num_vertices = xyz_points.shape[0]\n",
     "    xyz_rgb_all = np.column_stack([xyz_points, rgb_values])\n",
     "\n",
-    "    with open(path_to_save, \"a\") as f:\n",
+    "    with open(path_to_save, \"w\") as f:\n",
     "        # write the header\n",
     "        f.write(\"ply\\n\")\n",
     "        f.write(\"format ascii 1.0\\n\")\n",
@@ -1679,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1702,7 +1739,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: visualize in eshlab, possibly debug pixel values"
+    "TODO: visualize in Meshlab,"
    ]
   },
   {
@@ -1729,7 +1766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
