--- a/src/experiments_hw3.ipynb
+++ b/src/experiments_hw3.ipynb
@@ -1746,37 +1746,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;33m[Open3D WARNING] GLFW Error: Cocoa: Failed to find service port for display\u001b[0;m\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import open3d as o3d\n",
+    "# import open3d as o3d\n",
     "\n",
-    "%matplotlib widget\n",
+    "# %matplotlib widget\n",
     "\n",
-    "point_cloud = o3d.io.read_point_cloud(\"./Syed_Raza_PtCloudFalseColors.ply\")\n",
+    "# point_cloud = o3d.io.read_point_cloud(\"./Syed_Raza_PtCloudFalseColors.ply\")\n",
     "\n",
-    "# Visualize the point cloud\n",
-    "o3d.visualization.draw_geometries([point_cloud])"
+    "# # Visualize the point cloud\n",
+    "# o3d.visualization.draw_geometries([point_cloud])"
    ]
   },
   {
@@ -1788,179 +1769,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "WHITE_PIXEL_VALUE = 255\n",
+    "import numpy as np\n",
     "\n",
-    "\n",
-    "def determine_3d_model_points_and_true_rgb(\n",
-    "        cam_transform_paths: list[str],\n",
-    "        silhouette_paths: list[str],\n",
-    "        occupancy_voxel_grid: np.ndarray,\n",
-    "        surface_voxels_indices: np.ndarray,\n",
-    "        worldspace_axis_distances: tuple[float],\n",
-    "        scene_shape: tuple[int, int, int],\n",
-    "        min_xyz_coordinates: tuple[float, float, float] = (0, 0, 0),\n",
-    "        debug_mode: bool = False,\n",
-    "        white_pixel_val: int = WHITE_PIXEL_VALUE,\n",
-    "    ) -> np.ndarray:\n",
+    "def determine_rgb_colors(\n",
+    "    occupancy_voxel_grid: np.ndarray,\n",
+    "    cam_transform_paths: list[str],\n",
+    "    silhouette_paths: list[str],\n",
+    "    scene_shape: tuple[int, int, int],\n",
+    "    min_xyz_coordinates: tuple[float, float, float] = (0, 0, 0),\n",
+    "    debug_mode: bool = False,\n",
+    ") -> np.ndarray:\n",
     "    \"\"\"\n",
-    "    TODO[Zain] add docstring\n",
-    "\n",
-    "    Parameters:\n",
-    "        occupancy_voxel_grid - 3D array representing a voxel grid of scene. 0 = empty; and 1 = occupied.\n",
-    "        surface_voxels_indices - Nx3 array of the index positions of surface voxels\n",
-    "        scene_coords(tuple[nd.ndarray]): 3-tuple representing the set of\n",
-    "            all pre-computed XYZ coords in world space.\n",
+    "    TODO[Zain]: add docstring\n",
     "    \"\"\"\n",
     "    ### HELPER(S)\n",
-    "    def _get_neighbor_array_indices(x_index: int, y_index: int, z_index: int) -> dict[VoxelNeighbor, list[int]]:\n",
-    "        \"\"\"Compute array indices in 6 directions (one for each face of a cuboid voxel).\"\"\"\n",
-    "        neighbor_indices = dict(zip(\n",
-    "            [\n",
-    "                VoxelNeighbor.LEFT,\n",
-    "                VoxelNeighbor.RIGHT,\n",
-    "                VoxelNeighbor.BOTTOM,\n",
-    "                VoxelNeighbor.TOP,\n",
-    "                VoxelNeighbor.FRONT,\n",
-    "                VoxelNeighbor.BACK\n",
-    "            ],\n",
-    "            [\n",
-    "                [x_index - 1, y_index, z_index],  # left\n",
-    "                [x_index + 1, y_index, z_index],  # right\n",
-    "                [x_index, y_index - 1, z_index],  # bottom\n",
-    "                [x_index, y_index + 1, z_index],  # up\n",
-    "                [x_index, y_index, z_index - 1],  # front\n",
-    "                [x_index, y_index, z_index + 1],  # back\n",
-    "            ]\n",
-    "        ))\n",
-    "        return neighbor_indices\n",
+    "    def _get_camera_transform_from_xml(path_to_transform: str) -> np.ndarray:\n",
+    "        \"\"\"Reads serialized form of a projection matrix into a 3x4 NumPy array.\"\"\"\n",
+    "        tree = ET.parse(path_to_transform)\n",
+    "        root = tree.getroot()\n",
+    "        vals = [float(val) for val in root.text.split()]\n",
+    "        return np.array(vals).reshape(3, 4)\n",
     "\n",
-    "    def _get_face_center_points(x_index: int, y_index: int, z_index: int) -> dict[VoxelNeighbor, tuple[float]]:\n",
-    "        \"\"\"TODO[Zain]: add docstring\"\"\"\n",
-    "        x, y, z = x_index, y_index, z_index\n",
+    "    def _convert_index_location_to_worldspace(\n",
+    "            index_location_ijk: np.ndarray,\n",
+    "            voxel_size_xyz: np.ndarray,\n",
+    "            min_world_xyz: np.ndarray\n",
+    "        ) -> np.ndarray:\n",
+    "        # X = point_i * voxel_size_x + min_world_x\n",
+    "        # Y = point_j * voxel_size_y + min_world_y\n",
+    "        # Z = point_k * voxel_size_z + min_world_z\n",
+    "        ...\n",
     "\n",
-    "        # Calculate the center points of each face\n",
-    "        top_face_center = (x, y + 0.5, z)\n",
-    "        bottom_face_center = (x, y - 0.5, z)\n",
-    "        right_face_center = (x + 0.5, y, z)\n",
-    "        left_face_center = (x - 0.5, y, z)\n",
-    "        back_face_center = (x, y, z + 0.5)\n",
-    "        front_face_center = (x, y, z - 0.5)\n",
+    "    def _compute_step_size(\n",
+    "            index_location_ijk1: np.ndarray | tuple,\n",
+    "            index_location_ijk2: np.ndarray | tuple,\n",
+    "            voxel_size_xyz: np.ndarray,\n",
+    "            min_world_xyz: np.ndarray\n",
+    "        ) -> np.ndarray:\n",
+    "        # because our grid is a cuboid (all axis are equal length), the distance between 2 adjacent voxels is the same, regardless of orientation\n",
+    "        # so compute the worldspace coords of (0, 0, 0) and (0, 0, 1) respectively; then compute the magnitude of their difference\n",
+    "        ...\n",
     "\n",
-    "        return {\n",
-    "            VoxelNeighbor.TOP: top_face_center,\n",
-    "            VoxelNeighbor.BOTTOM: bottom_face_center,\n",
-    "            VoxelNeighbor.RIGHT: right_face_center,\n",
-    "            VoxelNeighbor.LEFT: left_face_center,\n",
-    "            VoxelNeighbor.BACK: back_face_center,\n",
-    "            VoxelNeighbor.FRONT: front_face_center,\n",
-    "        }\n",
+    "    def _convert_worldspace_to_index_location(world_coordinates: np.ndarray) -> np.ndarray:\n",
+    "        ...\n",
+    "\n",
+    "    def _sample_coordinates(translation: np.ndarray) -> np.ndarray:\n",
+    "        ...\n",
+    "\n",
+    "    def _color_coordinate(world_coordinate: np.ndarray) -> np.ndarray:\n",
+    "        # iterate over all the silhouette images + respective camera projections\n",
+    "            # fail fast - first project the XYZ location into the image - check if it's in the silhouette - if it's not, don't continue\n",
+    "                # figure out location of cam - use null space of 3x4 - 4x1 --> convert to non-homo coords\n",
+    "                # compute the translation vector going from the XYZ point --> cam --> translation (beware the order)\n",
+    "                # get an array of the worldspace sample locations along translation - given the step size earlier\n",
+    "                # for each step location, in XYZ\n",
+    "                    # convert to indices of the corresponding element in the occupancy_voxel_grid, if any\n",
+    "                        # to make sure we get everything - use bresenham_line()][]\n",
+    "                    # check if it's empty - if any are not, then the point is not visible in this image\n",
+    "                # if the point is visible - add the RGB value from the image to an array\n",
+    "\n",
+    "        # compute the RGB for the point in the 3d model\n",
+    "        ...\n",
     "\n",
     "    ### DRIVER\n",
-    "    # A: unravel the inputs\n",
-    "    x_distance, y_distance, z_distance = worldspace_axis_distances\n",
+    "    # load all images and projection matrices in ordered lists\n",
+    "    num_frames = len(cam_transform_paths)\n",
+    "    frames_to_projection_and_silhouette = dict()\n",
+    "    for frame_index in range(num_frames):\n",
+    "        cam_transform_path = cam_transform_paths[frame_index]\n",
+    "        silhouette_path = silhouette_paths[frame_index]\n",
+    "        cam_transform = _get_camera_transform_from_xml(cam_transform_path)\n",
+    "        silhouette_image = ops.load_image(\n",
+    "            silhouette_path,\n",
+    "            return_grayscale=True,\n",
+    "            return_array=True,\n",
+    "            verbosity=debug_mode,\n",
+    "        )\n",
+    "        frames_to_projection_and_silhouette[frame_index] = (\n",
+    "            cam_transform, silhouette_image\n",
+    "        )\n",
+    "\n",
+    "    # compute the step size to sample along the translation vector\n",
     "    x_resolution, y_resolution, z_resolution = scene_shape\n",
-    "    min_world_x, min_world_y, min_world_z = min_xyz_coordinates\n",
+    "    assert x_resolution == y_resolution == z_resolution, f\"I assumed the voxel grid was a cube, but this is false. Actual shape is {scene_shape}.\"\n",
+    "    step_size = _compute_step_size()\n",
     "\n",
-    "    # B: compute the voxel sizes\n",
-    "    voxel_size_x, voxel_size_y, voxel_size_z = (\n",
-    "        x_distance / x_resolution,\n",
-    "        y_distance / y_resolution,\n",
-    "        z_distance / z_resolution,\n",
+    "    # color all points\n",
+    "    # add\n",
+    "    rgb_colors = np.apply_along_axis(\n",
+    "        _color_coordinate,\n",
+    "        1,\n",
+    "        points_for_3d_model,\n",
     "    )\n",
-    "    if debug_mode:\n",
-    "        print(f\"[DEBUG] voxel_sizes are: {voxel_size_x, voxel_size_y, voxel_size_z}\")\n",
     "\n",
-    "    # C: iterate over the indices provided in surface_voxels_indices\n",
-    "    model_points_to_include = set()\n",
-    "    for x_index, y_index, z_index in surface_voxels_indices:\n",
-    "        # check which of the six faces are empty - get a list\n",
-    "        neighbor_indices = _get_neighbor_array_indices(x_index, y_index, z_index)\n",
-    "        # use `_get_face_center_points` to also get the index positions of the center of the faces of the voxel\n",
-    "        center_coords_of_faces = _get_face_center_points(x_index, y_index, z_index)\n",
-    "        if debug_mode:\n",
-    "            print(f\"[DEBUG] neighbor_indices are: {neighbor_indices}\")\n",
-    "            print(f\"[DEBUG] center_coords_of_faces are: {center_coords_of_faces}\")\n",
-    "        # then select the indices of face centers, based on which are facing an empty neighbor\n",
-    "        for face_name, neighbor_3d_index_pos in neighbor_indices.items():\n",
-    "            neighbor_i, neighbor_j, neighbor_k = neighbor_3d_index_pos\n",
-    "            if (\n",
-    "                -1 < neighbor_i < occupancy_voxel_grid.shape[0]\n",
-    "                and -1 < neighbor_j < occupancy_voxel_grid.shape[1]\n",
-    "                and -1 < neighbor_k < occupancy_voxel_grid.shape[2]\n",
-    "                and occupancy_voxel_grid[neighbor_i, neighbor_j, neighbor_k] == 0\n",
-    "            ):\n",
-    "                point_i, point_j, point_k = center_coords_of_faces[face_name]\n",
-    "                if (\n",
-    "                    -1 < point_i < occupancy_voxel_grid.shape[0]\n",
-    "                    and -1 < point_j < occupancy_voxel_grid.shape[1]\n",
-    "                    and -1 < point_k < occupancy_voxel_grid.shape[2]\n",
-    "                ):\n",
-    "                    # include this in the 3D model, as world space coords\n",
-    "                    X = point_i * voxel_size_x + min_world_x\n",
-    "                    Y = point_j * voxel_size_y + min_world_y\n",
-    "                    Z = point_k * voxel_size_z + min_world_z\n",
-    "                    model_points_to_include.add((X, Y, Z))\n",
-    "                    ...\n",
-    "                    #####################################################################\n",
-    "                    ###################### NEW CODE in PROGRESS... ######################\n",
-    "\n",
-    "                    # inputs:\n",
-    "                        # the paths of the silhouette images\n",
-    "                        # the camera transforms\n",
-    "                        # occupancy_voxel_grid\n",
-    "\n",
-    "                    # helpers\n",
-    "                        # worldspace --> array indices of a voxel element, if any\n",
-    "                        # sampling coords along a translation vector\n",
-    "\n",
-    "\n",
-    "                    # main code - for ONE XYZ worldspace coordinate of a vertex\n",
-    "                        # compute the step size to sample along the translation vector\n",
-    "                            # because our grid is a cuboid (all axis are equal length), the distance between 2 adjacent voxels is the same, regardless of orientation\n",
-    "                            # so compute the worldspace coords of (0, 0, 0) and (0, 0, 1) respectively; then compute the magnitude of their difference\n",
-    "\n",
-    "                        # iterate over all the RGB images + respective camera projections\n",
-    "                            # fail fast - first project the XYZ location into the image - check if it's in the silhouette - if it's not, don't continue\n",
-    "                                # figure out location of cam - use null space of 3x4 - 4x1 --> convert to non-homo coords\n",
-    "                                # compute the translation vector going from the XYZ point --> cam --> translation (beware the order)\n",
-    "                                # get an array of the worldspace sample locations along translation - given the step size earlier\n",
-    "                                # for each step location, in XYZ\n",
-    "                                    # convert to indices of the corresponding element in the occupancy_voxel_grid, if any\n",
-    "                                        # to make sure we get everything - use bresenham_line()][]\n",
-    "                                    # check if it's empty - if any are not, then the point is not visible in this image\n",
-    "                                # if the point is visible - add the RGB value from the image to an array\n",
-    "\n",
-    "                        # compute the RGB for the point in the 3d model\n",
-    "\n",
-    "                    #####################################################################\n",
-    "                    ...\n",
-    "                    if debug_mode:\n",
-    "                        print(\n",
-    "                            f\"[DEBUG] '{face_name.value}' neighbor to surface voxel @ {x_index, y_index, z_index} is empty. \"\n",
-    "                            f\"I'm converting point indices ({point_i, point_j, point_k}) -> ({X, Y, Z}) and including in the model.\"\n",
-    "                        )\n",
-    "    model_points_to_include = np.asarray([\n",
-    "        list(xyz_point_location) for xyz_point_location in model_points_to_include\n",
-    "    ])\n",
-    "\n",
-    "    # D: Report the number 3D points included in the model and compare with the number of voxels in the surface.\n",
-    "    print(f\"=========== Identifying Points to Include in the Model.... ===========\")\n",
-    "    num_points = model_points_to_include.shape[0]\n",
-    "    num_surface_voxels = surface_voxels_indices.shape[0]\n",
-    "    print(f\"Total number: {num_points}.\")\n",
-    "    if num_points > num_surface_voxels:\n",
-    "        print(f\"This is greater than the number of surface voxels, {num_surface_voxels}.\")\n",
-    "    elif num_points == num_surface_voxels:\n",
-    "        print(f\"This is the same as the number of surface voxels, {num_surface_voxels}.\")\n",
-    "    else:  # num_points < surface_voxels_indices.shape[0]\n",
-    "        print(f\"This is less than the number of surface voxels, {num_surface_voxels}.\")\n",
-    "\n",
-    "    return model_points_to_include"
+    "    return rgb_colors\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
