--- a/src/experiments_hw3.ipynb
+++ b/src/experiments_hw3.ipynb
@@ -1773,6 +1773,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import functools\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "def determine_rgb_colors(\n",
@@ -1817,13 +1819,35 @@
     "    def _convert_worldspace_to_index_location(world_coordinates: np.ndarray) -> np.ndarray:\n",
     "        ...\n",
     "\n",
+    "    def _convert_worldspace_to_image_space(world_coordinate: np.ndarray, cam_transform: np.ndarray) -> np.ndarray:\n",
+    "        world_coordinate_homogenous = np.concatenate([world_coordinate, [1]]).reshape(4, 1)\n",
+    "        image_xy_homogenous = np.dot(cam_transform, world_coordinate_homogenous).reshape(1, 3)\n",
+    "        # convert to \"pixel coords\" - for numpy reasons, we need to round so we have integers\n",
+    "        pixel_x = int(image_xy_homogenous[0, 0] // image_xy_homogenous[0, 2])\n",
+    "        pixel_y = int(image_xy_homogenous[0, 1] // image_xy_homogenous[0, 2])\n",
+    "        return pixel_x, pixel_y\n",
+    "\n",
     "    def _sample_coordinates(translation: np.ndarray) -> np.ndarray:\n",
     "        ...\n",
     "\n",
-    "    def _color_coordinate(world_coordinate: np.ndarray) -> np.ndarray:\n",
+    "    def _color_coordinate(\n",
+    "            world_coordinate: np.ndarray,\n",
+    "            frames_to_projection_and_silhouette: dict[int, tuple[np.ndarray, np.ndarray]],\n",
+    "        ) -> np.ndarray:\n",
+    "\n",
+    "        rgb_pixel_colors = []\n",
+    "\n",
     "        # iterate over all the silhouette images + respective camera projections\n",
+    "        for frame_index, frame_data in frames_to_projection_and_silhouette.items():\n",
+    "            frame_projection, silhouette_image = frame_data\n",
     "            # fail fast - first project the XYZ location into the image - check if it's in the silhouette - if it's not, don't continue\n",
-    "                # figure out location of cam - use null space of 3x4 - 4x1 --> convert to non-homo coords\n",
+    "            pixel_x, pixel_y = _convert_worldspace_to_image_space(world_coordinate, frame_projection)\n",
+    "            if (\n",
+    "                (-1 < pixel_y < silhouette_image.shape[0])\n",
+    "                and (-1 < pixel_x < silhouette_image.shape[1])\n",
+    "            ):\n",
+    "                # TODO[Zain] figure out location of cam - use null space of 3x4 - 4x1 --> convert to non-homo coords\n",
+    "\n",
     "                # compute the translation vector going from the XYZ point --> cam --> translation (beware the order)\n",
     "                # get an array of the worldspace sample locations along translation - given the step size earlier\n",
     "                # for each step location, in XYZ\n",
@@ -1833,7 +1857,10 @@
     "                # if the point is visible - add the RGB value from the image to an array\n",
     "\n",
     "        # compute the RGB for the point in the 3d model\n",
-    "        ...\n",
+    "        if len(rgb_colors) > 0:\n",
+    "            rgb_colors = ...\n",
+    "        else:\n",
+    "            return (0, 0, 0)\n",
     "\n",
     "    ### DRIVER\n",
     "    # load all images and projection matrices in ordered lists\n",
@@ -1859,9 +1886,13 @@
     "    step_size = _compute_step_size()\n",
     "\n",
     "    # color all points\n",
-    "    # add\n",
-    "    rgb_colors = np.apply_along_axis(\n",
+    "    _color_coordinate_simplified = functools.partial(\n",
     "        _color_coordinate,\n",
+    "        frames_to_projection_and_silhouette=frames_to_projection_and_silhouette,\n",
+    "    )\n",
+    "\n",
+    "    rgb_colors = np.apply_along_axis(\n",
+    "        _color_coordinate_simplified,\n",
     "        1,\n",
     "        points_for_3d_model,\n",
     "    )\n",
