[WIP] add full implementation for step 7 (I think)

--- a/src/experiments_hw3.ipynb
+++ b/src/experiments_hw3.ipynb
@@ -1776,19 +1776,47 @@
     "import functools\n",
     "\n",
     "import numpy as np\n",
+    "from scipy import linalg as sci_alg\n",
     "\n",
     "def determine_rgb_colors(\n",
     "    occupancy_voxel_grid: np.ndarray,\n",
     "    cam_transform_paths: list[str],\n",
+    "    rgb_paths: list[str],\n",
     "    silhouette_paths: list[str],\n",
     "    scene_shape: tuple[int, int, int],\n",
-    "    min_xyz_coordinates: tuple[float, float, float] = (0, 0, 0),\n",
+    "    scene_dimensions: tuple[float, float, float],\n",
+    "    min_xyz_coordinates: np.ndarray[float, float, float],\n",
     "    debug_mode: bool = False,\n",
     ") -> np.ndarray:\n",
     "    \"\"\"\n",
     "    TODO[Zain]: add docstring\n",
     "    \"\"\"\n",
     "    ### HELPER(S)\n",
+    "    def _associate_frame_info():\n",
+    "        num_frames = len(cam_transform_paths)\n",
+    "        frames_to_projection_and_images = dict()\n",
+    "        for frame_index in range(num_frames):\n",
+    "            cam_transform_path = cam_transform_paths[frame_index]\n",
+    "            silhouette_path = silhouette_paths[frame_index]\n",
+    "            rgb_path = rgb_paths[frame_index]\n",
+    "            cam_transform = _get_camera_transform_from_xml(cam_transform_path)\n",
+    "            silhouette_image = ops.load_image(\n",
+    "                silhouette_path,\n",
+    "                return_grayscale=True,\n",
+    "                return_array=True,\n",
+    "                verbosity=debug_mode,\n",
+    "            )\n",
+    "            rgb_image = ops.load_image(\n",
+    "                rgb_path,\n",
+    "                return_grayscale=False,\n",
+    "                return_array=True,\n",
+    "                verbosity=debug_mode,\n",
+    "            )\n",
+    "            frames_to_projection_and_images[frame_index] = (\n",
+    "                cam_transform, silhouette_image, rgb_image\n",
+    "            )\n",
+    "        return frames_to_projection_and_images\n",
+    "\n",
     "    def _get_camera_transform_from_xml(path_to_transform: str) -> np.ndarray:\n",
     "        \"\"\"Reads serialized form of a projection matrix into a 3x4 NumPy array.\"\"\"\n",
     "        tree = ET.parse(path_to_transform)\n",
@@ -1801,10 +1829,13 @@
     "            voxel_size_xyz: np.ndarray,\n",
     "            min_world_xyz: np.ndarray\n",
     "        ) -> np.ndarray:\n",
-    "        # X = point_i * voxel_size_x + min_world_x\n",
-    "        # Y = point_j * voxel_size_y + min_world_y\n",
-    "        # Z = point_k * voxel_size_z + min_world_z\n",
-    "        ...\n",
+    "        point_i, point_j, point_k = index_location_ijk\n",
+    "        voxel_size_x, voxel_size_y, voxel_size_z = voxel_size_xyz\n",
+    "        min_world_x, min_world_y, min_world_z = min_world_xyz\n",
+    "        X = point_i * voxel_size_x + min_world_x\n",
+    "        Y = point_j * voxel_size_y + min_world_y\n",
+    "        Z = point_k * voxel_size_z + min_world_z\n",
+    "        return np.array([[X, Y, Z]])\n",
     "\n",
     "    def _compute_step_size(\n",
     "            index_location_ijk1: np.ndarray | tuple,\n",
@@ -1814,10 +1845,24 @@
     "        ) -> np.ndarray:\n",
     "        # because our grid is a cuboid (all axis are equal length), the distance between 2 adjacent voxels is the same, regardless of orientation\n",
     "        # so compute the worldspace coords of (0, 0, 0) and (0, 0, 1) respectively; then compute the magnitude of their difference\n",
-    "        ...\n",
+    "        world_xyz1 = _convert_index_location_to_worldspace(index_location_ijk1, voxel_size_xyz, min_world_xyz)\n",
+    "        world_xyz2 = _convert_index_location_to_worldspace(index_location_ijk2, voxel_size_xyz, min_world_xyz)\n",
+    "        return np.linalg.norm(world_xyz2 - world_xyz1)\n",
     "\n",
-    "    def _convert_worldspace_to_index_location(world_coordinates: np.ndarray) -> np.ndarray:\n",
-    "        ...\n",
+    "    def _convert_worldspace_to_index_location(\n",
+    "            world_coordinates: np.ndarray,\n",
+    "            voxel_size_xyz: np.ndarray,\n",
+    "            min_world_xyz: np.ndarray,\n",
+    "        ) -> np.ndarray:\n",
+    "        \"\"\"do the opposite of _convert_index_location_to_worldspace\"\"\"\n",
+    "        world_coordinates = world_coordinates.squeeze()\n",
+    "        X, Y, Z = world_coordinates\n",
+    "        voxel_size_x, voxel_size_y, voxel_size_z = voxel_size_xyz\n",
+    "        min_world_x, min_world_y, min_world_z = min_world_xyz\n",
+    "        point_i = (X - min_world_x) / voxel_size_x\n",
+    "        point_j = (Y - min_world_y) / voxel_size_y\n",
+    "        point_k = (Z - min_world_z) / voxel_size_z\n",
+    "        return np.array([[point_i, point_j, point_k]])\n",
     "\n",
     "    def _convert_worldspace_to_image_space(world_coordinate: np.ndarray, cam_transform: np.ndarray) -> np.ndarray:\n",
     "        world_coordinate_homogenous = np.concatenate([world_coordinate, [1]]).reshape(4, 1)\n",
@@ -1827,68 +1872,156 @@
     "        pixel_y = int(image_xy_homogenous[0, 1] // image_xy_homogenous[0, 2])\n",
     "        return pixel_x, pixel_y\n",
     "\n",
-    "    def _sample_coordinates(translation: np.ndarray) -> np.ndarray:\n",
-    "        ...\n",
+    "    def _sample_coordinates(translation: np.ndarray, cam_center_coords_worldspace: np.ndarray, step_size: float) -> np.ndarray:\n",
+    "        translation_magnitude = np.linalg.norm(translation)\n",
+    "        num_steps = int(translation_magnitude / step_size)\n",
+    "        sampled_coordinates = []\n",
+    "        for i in range(num_steps + 1):  # Include the endpoint\n",
+    "            # Compute the coordinates of the sampled point\n",
+    "            sampled_point = cam_center_coords_worldspace + (translation * (i / num_steps))\n",
+    "            sampled_coordinates.append(sampled_point)\n",
+    "        sample_coordinates = np.asarray(sampled_coordinates)\n",
+    "        # for each step location, in XYZ\n",
+    "        sample_array_indices = np.apply_along_axis(\n",
+    "            _convert_worldspace_to_index_location,\n",
+    "            1,\n",
+    "            sample_coordinates,\n",
+    "        )\n",
+    "        return sample_array_indices\n",
+    "\n",
+    "    def _bresenham_line(start_index: np.ndarray, end_index: np.ndarray) -> np.ndarray:\n",
+    "        \"\"\"\n",
+    "        Generates a list of array indices that lie on\n",
+    "        the line segment between two given elements in\n",
+    "        the 3D voxel grid.\n",
+    "        \"\"\"\n",
+    "        # Get start and end points\n",
+    "        x0, y0, z0 = start_index\n",
+    "        x1, y1, z1 = end_index\n",
+    "\n",
+    "        # Compute differences and absolute differences\n",
+    "        dx = np.abs(x1 - x0)\n",
+    "        dy = np.abs(y1 - y0)\n",
+    "        dz = np.abs(z1 - z0)\n",
+    "\n",
+    "        # Determine the increments for each axis\n",
+    "        sx = np.sign(x1 - x0)\n",
+    "        sy = np.sign(y1 - y0)\n",
+    "        sz = np.sign(z1 - z0)\n",
+    "\n",
+    "        # Initialize error terms\n",
+    "        err1 = dx - dy\n",
+    "        err2 = dx - dz\n",
+    "\n",
+    "        # Initialize current position\n",
+    "        x, y, z = x0, y0, z0\n",
+    "\n",
+    "        # Initialize list to store line points\n",
+    "        line_points = []\n",
+    "\n",
+    "        # Iterate along the line\n",
+    "        while x != x1 or y != y1 or z != z1:\n",
+    "            # Add current point to the line\n",
+    "            line_points.append((x, y, z))\n",
+    "\n",
+    "            # Compute next position\n",
+    "            e2 = 2 * err1\n",
+    "            e3 = 2 * err2\n",
+    "\n",
+    "            if e2 > -dy:\n",
+    "                err1 -= dy\n",
+    "                x += sx\n",
+    "            if e3 > -dz:\n",
+    "                err2 -= dz\n",
+    "                y += sy\n",
+    "\n",
+    "            if e2 < dx:\n",
+    "                err1 += dx\n",
+    "                y += sy\n",
+    "            if e3 < dx:\n",
+    "                err2 += dx\n",
+    "                z += sz\n",
+    "\n",
+    "        # Add the endpoint to the line\n",
+    "        line_points.append((x1, y1, z1))\n",
+    "\n",
+    "        return np.asarray(line_points)\n",
     "\n",
     "    def _color_coordinate(\n",
     "            world_coordinate: np.ndarray,\n",
-    "            frames_to_projection_and_silhouette: dict[int, tuple[np.ndarray, np.ndarray]],\n",
+    "            step_size: float,\n",
+    "            frames_to_projection_and_images: dict[int, tuple[np.ndarray, np.ndarray, np.ndarray]],\n",
     "        ) -> np.ndarray:\n",
     "\n",
     "        rgb_pixel_colors = []\n",
     "\n",
     "        # iterate over all the silhouette images + respective camera projections\n",
-    "        for frame_index, frame_data in frames_to_projection_and_silhouette.items():\n",
-    "            frame_projection, silhouette_image = frame_data\n",
+    "        for _, frame_data in frames_to_projection_and_images.items():\n",
+    "            frame_projection, silhouette_image, rgb_image = frame_data\n",
     "            # fail fast - first project the XYZ location into the image - check if it's in the silhouette - if it's not, don't continue\n",
     "            pixel_x, pixel_y = _convert_worldspace_to_image_space(world_coordinate, frame_projection)\n",
     "            if (\n",
     "                (-1 < pixel_y < silhouette_image.shape[0])\n",
     "                and (-1 < pixel_x < silhouette_image.shape[1])\n",
     "            ):\n",
-    "                # TODO[Zain] figure out location of cam - use null space of 3x4 - 4x1 --> convert to non-homo coords\n",
+    "                # figure out location of cam - use null space of 3x4 - 4x1 --> convert to non-homo coords\n",
+    "                cam_center = sci_alg.null_space(frame_projection).reshape(1, 4)  # initially is a 4x1\n",
+    "                cam_center_coords_worldspace = cam_center[0, :3] / cam_center[0, 3]\n",
+    "                # compute the translation vector going from the XYZ point --> cam\n",
+    "                translation = world_coordinate - cam_center_coords_worldspace  # (beware the order)!!!\n",
+    "                sample_array_indices = _sample_coordinates(translation, cam_center_coords_worldspace, step_size)\n",
+    "                # search along the translation vector to check visibility\n",
+    "                is_visible = True\n",
+    "                for index in range(sample_array_indices.shape[0] - 1):\n",
+    "                    current_sample_index = sample_array_indices[index, :]\n",
+    "                    next_index = sample_array_indices[index + 1, :]\n",
+    "                    rasterized_indices = _bresenham_line(current_sample_index, next_index)\n",
     "\n",
-    "                # compute the translation vector going from the XYZ point --> cam --> translation (beware the order)\n",
-    "                # get an array of the worldspace sample locations along translation - given the step size earlier\n",
-    "                # for each step location, in XYZ\n",
-    "                    # convert to indices of the corresponding element in the occupancy_voxel_grid, if any\n",
-    "                        # to make sure we get everything - use bresenham_line()][]\n",
-    "                    # check if it's empty - if any are not, then the point is not visible in this image\n",
-    "                # if the point is visible - add the RGB value from the image to an array\n",
+    "                    # Check each voxel along the line segment in the voxel grid\n",
+    "                    for index in rasterized_indices:\n",
+    "                        if occupancy_voxel_grid[index] == 1:  # Occupied voxel\n",
+    "                            # if the point is visible - add the RGB value from the image to an array\n",
+    "                            if debug_mode:\n",
+    "                                print(f\"Voxel at {index} is occupied. Pixel ({pixel_x}, {pixel_y}) is not visible.\")\n",
+    "                            is_visible = False\n",
+    "                        elif debug_mode:\n",
+    "                            print(f\"Voxel at {index} is NOT occupied.\")\n",
+    "                if is_visible:\n",
+    "                    rgb_pixel_colors.append(rgb_image[pixel_y, pixel_x, :].reshape(1, 3))\n",
     "\n",
     "        # compute the RGB for the point in the 3d model\n",
-    "        if len(rgb_colors) > 0:\n",
-    "            rgb_colors = ...\n",
+    "        rgb_pixel_colors = np.asarray(rgb_pixel_colors)\n",
+    "        if len(rgb_pixel_colors.shape) == 2 and rgb_pixel_colors.shape[0] > 0:\n",
+    "            return tuple(np.median(rgb_pixel_colors, axis=1).squeeze())\n",
     "        else:\n",
     "            return (0, 0, 0)\n",
     "\n",
     "    ### DRIVER\n",
     "    # load all images and projection matrices in ordered lists\n",
-    "    num_frames = len(cam_transform_paths)\n",
-    "    frames_to_projection_and_silhouette = dict()\n",
-    "    for frame_index in range(num_frames):\n",
-    "        cam_transform_path = cam_transform_paths[frame_index]\n",
-    "        silhouette_path = silhouette_paths[frame_index]\n",
-    "        cam_transform = _get_camera_transform_from_xml(cam_transform_path)\n",
-    "        silhouette_image = ops.load_image(\n",
-    "            silhouette_path,\n",
-    "            return_grayscale=True,\n",
-    "            return_array=True,\n",
-    "            verbosity=debug_mode,\n",
-    "        )\n",
-    "        frames_to_projection_and_silhouette[frame_index] = (\n",
-    "            cam_transform, silhouette_image\n",
-    "        )\n",
+    "    frames_to_projection_and_images = _associate_frame_info()\n",
     "\n",
     "    # compute the step size to sample along the translation vector\n",
     "    x_resolution, y_resolution, z_resolution = scene_shape\n",
+    "    x_distance, y_distance, z_distance = scene_dimensions\n",
+    "    voxel_size_xyz = np.array([\n",
+    "        x_distance / x_resolution,\n",
+    "        y_distance / y_resolution,\n",
+    "        z_distance / z_resolution\n",
+    "    ])\n",
     "    assert x_resolution == y_resolution == z_resolution, f\"I assumed the voxel grid was a cube, but this is false. Actual shape is {scene_shape}.\"\n",
-    "    step_size = _compute_step_size()\n",
+    "    assert isinstance(min_xyz_coordinates, np.ndarray)\n",
+    "    step_size = _compute_step_size(\n",
+    "        min_xyz_coordinates,\n",
+    "        min_xyz_coordinates + 1,\n",
+    "        voxel_size_xyz,\n",
+    "        min_xyz_coordinates,\n",
+    "    )\n",
     "\n",
     "    # color all points\n",
     "    _color_coordinate_simplified = functools.partial(\n",
     "        _color_coordinate,\n",
-    "        frames_to_projection_and_silhouette=frames_to_projection_and_silhouette,\n",
+    "        step_size=step_size,\n",
+    "        frames_to_projection_and_silhouette=frames_to_projection_and_images,\n",
     "    )\n",
     "\n",
     "    rgb_colors = np.apply_along_axis(\n",
